# go-2016

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/engines/: engine_factory.cpp  engine_factory.hpp  rand_engine.hpp  simple_engine_base.cpp  simple_engine_base.hpp  uct_engine.hpp
